--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 RIVERSIDE, CA 92508">
 <meta name="data-map" content="20694+HILLSDALE+RD+,+RIVERSIDE,+CA+92508">
   <meta name="description" content="We are a 501(c)(3) organization advancing arts education and cultural programs through transparent programs, local partnerships, and measurable outcomes.">
+<meta name="facebook-domain-verification" content="mzibrn1jsydcvndxkysn6ryv88gcch" />
 </head><body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
   <span>We are a 501(c)(3) organization advancing arts education and cultural programs through transparent programs, local partnerships, and measurable outcomes.</span><svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><circle cx="6" cy="6" r="5" fill="#9d174d"/></svg><img src="images/community.jpg" width="1" height="1" alt="" loading="lazy"/>
